# chatbot-llm

./: .coverage  .env 2.example  .env.example  .env.template  .gitignore  .gitmodules  .ontologies  .pre-commit-config.yaml  .safety-project.ini  .sourcery.yaml  =0.21.0  CONTRIBUTING.md  LICENSE  MANIFEST 2.in  MANIFEST.in  README.md  bot_user.ttl  chatbot.ttl  clpm.py  clpm_bootstrap.yml  commit_message.md  condaenv.xj5zwj0d.requirements.txt  config_management 2.ttl  config_management.ttl  cortex_analyst.ttl  cortex_integration.md  cortex_schema.md  cortexteams.ttl  cortexteamsrisks.ttl  cost_analysis.md  cost_analysis.ttl  coverage_report.txt  create_ontology_links.py  debug_ontology.py  debug_python_env.py  deployment.ttl  deployment_config.ttl  deployment_update 2.md  deployment_update.md  deployment_validation.ttl  (+40 more)
.cursor/: config.json  init.py
.cursor/extension/: LICENSE  LICENSE 2  cursor-sparql-1.0.0.vsix  package-lock.json  package.json
.cursor/rules/: artifact-traceability.mdc  black-formatter.mdc  no-requirements-txt.mdc  project-ontology.mdc  project-root-ontologies.mdc  sparql-queries.mdc
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: project-planning 2.md  project-planning.md  security-report.md  test-regression-fix.md
.github/pull_requests/: error-handling-implementation.md
.github/workflows/: dev-validation 2.yml  dev-validation.yml  validate-environment 2.yml  validate-environment.yml
docs/: architecture.md  deployment_architecture.md  detailed_requirements.md  executive_overview 2.md  executive_overview.md  index 2.md  index.md  key_rotation.md  package_management.md  requirements.md  stakeholders.md  use_case_traceability.md  use_cases.md
docs/api/: README.md
docs/architecture/: ontology.md
docs/guides/: deployment.md  faq.md
docs/security/: msrc-report-2024-03.md
docs/use_cases/: key_rotation_activities.md  key_rotation_use_cases.md
ontologies/: cognition_patterns.ttl  package_management.ttl  policy_driven_implementation.ttl  test_coverage.ttl  visualization.ttl
schemas/: security_vulnerability.json
scripts/: deploy.sh  deploy_snowflake.sql  manage_1password.sh  manage_packages.py  submit_msrc_report.py  update_docs_index.py
src/chatbot_llm/: validate.py
src/chatbot_llm.egg-info/: PKG-INFO  PKG-INFO 2  SOURCES.txt  requires.txt  top_level.txt
teams-bot/: .env.example  .funcignore  conversation.ttl  deploy.sh  deployment_extensions.ttl  deployment_instance.ttl  documentation_validation.ttl  function.json  function_app.py  guidance.ttl  local.settings.json  local.settings.json   meta.ttl  problem.ttl  requirements.txt  solution.ttl  start-local.sh  validate_deployment.py
teams-bot/.azure/: config
teams-bot/TeamsWebhook/: __init__.py
teams-bot/bot/: __init__.py  teams_bot.py
teams_bot/: .coverage  .env.template  .funcignore 2  .funcignore 3  LOCAL_TESTING.md  README.md  VALIDATION.md  __init__.py  app.py  deploy.sh  deployment_extensions.ttl  deployment_instance.ttl  development_workflow.ttl  documentation.ttl  documentation_validation.ttl  environment.yml  function_app.py  guidance.ttl  host.json  run_local.py  start-local 2.sh  start-local.sh  validate_deployment.py
teams_bot/.azure/: config 4
teams_bot/TeamsWebhook/: __init__.py  function.json
teams_bot/bot/: __init__.py  card_actions.py  card_templates.py  conversation_data.py  conversation_state.py  cosmos_storage.py  error_middleware.py  exceptions.py  logging_config.py  state_manager.py  teams_bot.py  user_profile.py
teams_bot/config/: key_vault.py  logging.conf  rotation_config 2.yaml  rotation_config.yaml  settings.py
teams_bot/messages/: __init__.py  function.json
teams_bot/scripts/: check_secret_expiry 2.py  check_secret_expiry.py  deploy_keyvault.sh  rotate_secrets 2.py  rotate_secrets.py  rotate_secrets.sh  setup_snowflake_auth.sh  sync_keyvault_secrets.sh
teams_bot/tests/: __init__.py  conftest.py  test_key_vault.py  (+11 more)
tests/: __init__.py  test_ontology_accessibility.py  test_ontology_coverage.py  test_ontology_general.py  test_package_management.py  test_security_scanners.py  test_security_scanners_integration.py  test_session_context_manager.py  test_snowpark 2.py  test_snowpark.py  validate_env.py
tools/: __init__.py  get_checkpoint.py  get_status.py  jena_tools.py  manage_deps.py  plantuml_generator.py  register_tools.py  setup_local_env.sh  sparql_query 5.py  sparql_query.py  test_cases.json  test_messages.py  validate_local_env.py  validate_ontology_state.py  validate_session_state.py  visualization_engine.py
(+67 files in other folders)
