[build-system]
requires = ["setuptools>=65.0.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbot-llm"
version = "0.1.0"
description = "Ontology-driven LLM chatbot framework"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Lou Springer", email = "lou@louspringer.com"},
]
dependencies = [
    "rdflib",
    "pyshacl",
    "pyyaml>=6.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["teams_bot/tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
# Add project root to PYTHONPATH to allow tests to import from the root directory
# This ensures imports like 'from teams_bot.bot.teams_bot import TeamsBot' work correctly
pythonpath = ["."]
asyncio_mode = "strict" 