[build-system]
requires = ["setuptools>=65.0.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbot-llm"
version = "0.1.0"
description = "Ontology-driven LLM chatbot framework"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Lou Springer", email = "lou@louspringer.com"},
]
dependencies = [
    "rdflib>=6.0.0",
    "owlready2>=0.37",
    "pyshacl>=0.20.0",
    "python-dotenv>=0.19.0",
    "pyyaml>=6.0.0",
    "aiohttp>=3.8.0",
    "botbuilder-core>=4.14.0",
    "botbuilder-schema>=4.14.0",
    "botbuilder-dialogs>=4.14.0",
    "botbuilder-ai>=4.14.0",
    "botbuilder-azure>=4.14.0",
    "botbuilder-integration-aiohttp>=4.14.0",
    "azure-functions>=1.17.0",
    "azure-identity>=1.12.0",
    "azure-keyvault-secrets>=4.7.0",
    "snowflake-snowpark-python>=1.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-cov>=3.0.0",
    "pytest-asyncio==0.21.1",
    "pytest-mock>=3.10.0",
    "pytest-env>=1.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pre-commit>=2.17.0",
    "botbuilder-testing>=4.14.0",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q" 